--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">QueueCentral</string>
+    <string name="server_client_id">627271039306-pmpu3n4npmlls97vkj0i9kunip66gr23.apps.googleusercontent.com</string>
 </resources>
